# AiLang

./: .gitignore  AGENTS.md  AiLang.slnx  BETA_READINESS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  ailang-toolchain.toml  ailang_buffer_hardening.md  build.ps1  build.sh  compiler  issues-tmp.sh  project.aiproj  std  test-aivm-c.ps1  test-aivm-c.sh  test.ps1  test.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.tmp-aot/: airun  format.aos  http.aos  json.aos  route.aos  runtime.aos
AiVM.C/: CMakeLists.txt  README.md
AiVM.C/examples/: hello_vm.c
AiVM.C/include/: aivm_c_api.h  aivm_parity.h  aivm_program.h  aivm_syscall.h  aivm_syscall_contracts.h  aivm_types.h  aivm_vm.h
AiVM.C/src/: aivm_c_api.c  aivm_parity.c  aivm_program.c  aivm_syscall.c  aivm_syscall_contracts.c  aivm_types.c  aivm_vm.c
AiVM.C/tests/: compiler_runtime_bench_baseline.tsv  parity_commands.txt  parity_commands_ci.txt  parity_commands_portable.txt  test_c_api.c  test_parity.c  test_program_loader.c  test_runtime.c  test_shared_bridge_loader.c  test_syscall.c  test_syscall_contracts.c  test_values.c  test_vm_core.c  test_vm_diagnostics.c  test_vm_frames_locals.c  test_vm_ops.c
AiVM.C/tests/parity_cases/: repl_sys_error.in  repl_sys_success.out  repl_ui_createwindow_arity_error.in  repl_ui_createwindow_arity_error.out  repl_ui_drawline_error.out  repl_ui_drawpath_arity_error.out  repl_ui_getwindowsize_type_error.out  sys_remove_bad_type.out  sys_substring_bad_arity.aos  sys_substring_bad_arity.out  vm_c_execute_program_source_gate.aos  vm_c_execute_program_source_gate.out  vm_c_execute_src_async_call_oob.aos  vm_c_execute_src_async_callsys_bad_slot.aos  vm_c_execute_src_async_callsys_missing_target.aos  vm_c_execute_src_async_callsys_missing_target.out  vm_c_execute_src_await_nonzero_b.aos  vm_c_execute_src_call_oob.aos  vm_c_execute_src_callsys_bad_slot.aos  vm_c_execute_src_callsys_bad_slot.out  vm_c_execute_src_callsys_missing_target.aos  vm_c_execute_src_callsys_missing_target.out  vm_c_execute_src_invalid_abi_whitespace.aos  vm_c_execute_src_jump_if_false_negative.aos  vm_c_execute_src_jump_negative.aos  vm_c_execute_src_main_params.aos  vm_c_execute_src_make_node_unsupported.out  vm_c_execute_src_missing_main.out  vm_c_execute_src_nonmain_params.aos  vm_c_execute_src_nonmain_params.out  vm_c_execute_src_nonzero_b.aos  vm_c_execute_src_nonzero_b.out  vm_c_execute_src_opcode_unmapped.aos  vm_c_execute_src_opcode_unmapped.out  vm_c_execute_src_par_begin_nonzero_b.aos  vm_c_execute_src_par_fork_unsupported.out  vm_c_execute_src_parse_error.aos  vm_c_execute_src_unexpected_s.out
Docs/: Agent-CodeMap.md  Agent-Debug-Workflow.md  AiLang-AiVectra-Boundary.md  AiLang-Build.md  AiLang-Clean.md  AiLang-Init.md  AiLang-Packages.md  AiLang-Project.md  AiLang-Publish.md  AiLang-Run.md  AiLang-Self-Hosting-Rewrite.md  AiLang-Test.md  Conventions.md  (+36 more)
src/AiVM.Core/native/: CMakeLists.txt  CMakePresets.json  README.md  aivm_parity.c  aivm_program.c  aivm_runtime.c  aivm_types.c  aivm_vm.c
src/AiVM.Core/native/examples/: parity_cli.c  remote_stdio_bridge.c  wasm_runner.c
src/AiVM.Core/native/include/: aivm_c_api.h  aivm_parity.h  aivm_program.h  aivm_runtime.h  aivm_syscall.h  aivm_types.h  aivm_vm.h
src/AiVM.Core/native/include/remote/: aivm_remote_channel.h  aivm_remote_session.h  aivm_remote_transport.h
src/AiVM.Core/native/include/sys/: aivm_syscall.h  aivm_syscall_contracts.h
src/AiVM.Core/native/remote/: aivm_remote_session.c  aivm_remote_transport.c  aivm_remote_ws_frame.c
src/AiVM.Core/native/src/: aivm_c_api.c  aivm_program.c  aivm_runtime.c  aivm_syscall.c  aivm_syscall_contracts.c  aivm_types.c  aivm_vm.c
src/AiVM.Core/native/src/remote/: aivm_remote_channel.c
src/AiVM.Core/native/src/sys/: aivm_syscall_contracts.c
src/AiVM.Core/native/sys/: aivm_syscall.c  aivm_syscall_contracts.c
src/AiVM.Core/native/tests/: compiler_runtime_bench_baseline.tsv  ctest_airun_smoke.ps1  ctest_airun_smoke.sh  ctest_debug_memory_smoke.ps1  ctest_debug_memory_smoke.sh  ctest_task_edge_parity.ps1  ctest_task_edge_parity.sh  ctest_wasm_golden.sh  parity_commands.txt  parity_commands_ci.txt  parity_commands_portable.txt  perf_baseline.env  test_bytes_host.c  test_c_api.c  test_host_open_default.c  test_host_open_url.c  test_memory_cycle.c  test_memory_rc.c  test_net_async_host.c  test_parity.c  test_process_host.c  test_process_lifecycle_stress.c  test_program_loader.c  test_remote_channel.c  test_remote_session.c  test_remote_transport.c  test_runtime.c  test_syscall.c  test_syscall_contracts.c  test_ui_image_host.c  test_values.c  test_vm_core.c  test_vm_determinism.c  test_vm_diagnostics.c  test_vm_frames_locals.c  test_vm_ops.c  test_vm_stack.c
src/AiVM.Core/native/tests/parity_cases/: call_return_large_arity_preserves_first_arg.aos  call_return_large_arity_preserves_first_arg.out  native_call_arity_error.aos  native_call_arity_error.out  native_recursive_locals.aos  native_recursive_locals.out  native_string_arena_source_stability.aos  native_string_arena_source_stability.out  repl_crypto_hmac_arity_error.in  repl_crypto_hmac_arity_error.out  repl_net_tcpconnect_type_error.in  repl_net_tcpconnect_type_error.out  repl_process_syscalls.in  repl_process_syscalls.out  repl_sys_error.in  repl_sys_error.out  repl_sys_success.in  repl_sys_success.out  repl_ui_createwindow_arity_error.in  repl_ui_createwindow_arity_error.out  repl_ui_drawline_error.in  repl_ui_drawline_error.out  repl_ui_drawpath_arity_error.in  repl_ui_drawpath_arity_error.out  repl_ui_getwindowsize_type_error.in  repl_ui_getwindowsize_type_error.out  repl_worker_cancel_type_error.in  repl_worker_cancel_type_error.out  sys_remove_bad_type.aos  sys_remove_bad_type.out  sys_substring_bad_arity.aos  sys_substring_bad_arity.out  sys_utf8_bad_type.aos  sys_utf8_bad_type.out  vm_c_execute_program_source_gate.out  vm_c_execute_src_async_call_negative.aos  vm_c_execute_src_async_call_oob.aos  vm_c_execute_src_async_callsys_bad_slot.aos  vm_c_execute_src_async_callsys_bad_slot.out  vm_c_execute_src_async_callsys_missing_target.aos  (+56 more)
(+404 files in other folders)
